--- a/twikey_integration/views/res_partner_view.xml
+++ b/twikey_integration/views/res_partner_view.xml
@@ -1,35 +1,39 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-   <record id="res_partner_view_twikey_form_inherit" model="ir.ui.view">
+   <record id="view_partner_form" model="ir.ui.view">
        <field name="name">res.partner.view.twikey.form.inherit</field>
        <field name="model">res.partner</field>
-       <field name="inherit_id" ref="base.view_partner_form"/>
+       <field name="inherit_id" ref="base.view_partner_form" />
        <field name="arch" type="xml">
            <xpath expr="//form//sheet" position="before">
                <header>
-                   <button name="action_invite_customer" string="Create mandate invite" type="object" class="oe_highlight"/>
+                   <button
+                        name="action_invite_customer"
+                        string="Create mandate invite"
+                        type="object"
+                        class="oe_highlight"
+                        attrs="{'invisible': [('show_create_mandate_invite_button', '=', False)]}"
+                    />
                </header>
+           </xpath>
+           <xpath expr="//form//field[@name='name']" position="after">
+               <field name="show_create_mandate_invite_button" invisible="1" />
            </xpath>
            <xpath expr="//notebook" position="inside">
                 <page name="mandate" string="Mandates">
-                    <field name="mandate_ids"/>
+                    <field name="twikey_mandate_ids" />
                 </page>
            </xpath>
        </field>
    </record>
-    <record id="res_partner_account_view_twikey_form_inherit" model="ir.ui.view">
+    <record id="view_partner_property_form" model="ir.ui.view">
         <field name="name">res.partner.account.view.twikey.form.inherit</field>
         <field name="model">res.partner</field>
-        <field name="inherit_id" ref="account.view_partner_property_form"/>
+        <field name="inherit_id" ref="account.view_partner_property_form" />
         <field name="arch" type="xml">
             <xpath expr="//notebook/page[@name='accounting']" position="inside">
                 <group string="Twikey Invoices">
-                    <field nolabel="1" name="twikey_inv_ids" context="{'tree_view_ref':'account.invoice_tree', 'form_view_ref': 'account.invoice_form'}"/>
-                </group>
-            </xpath>
-            <xpath expr="//notebook/page[@name='accounting_disabled']" position="inside">
-                <group string="Twikey Invoices">
-                    <field nolabel="1" name="twikey_inv_ids" context="{'tree_view_ref':'account.invoice_tree', 'form_view_ref': 'account.invoice_form'}"/>
+                    <field nolabel="1" name="twikey_inv_ids" />
                 </group>
             </xpath>
         </field>
